--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro'
               rel='stylesheet' type='text/css' />
 
-        <title>Design and Implementation of Software Applications I</title>
+        <title>Data Structures</title>
 
 </head>
 
