--- a/index.html
+++ b/index.html
@@ -65,18 +65,14 @@ traversals. Sorting and searching techniques. Graph algorithms.
 
         <h3>Course Objectives</h3>
 
-        If you successfully complete this course, you will
+        If you successfully complete this course, you will be able to
 
         <ul>
-            <li>become competent in programming in Java</li>
-
-            <li>deepen your understanding of object-oriented
-                programming</li>
-
-            <li>acquire experience programming with others</li>
-
-            <li>acquire basic knowledge about programming in
-                specific domains such as networking and graphics</li>
+          <li>use the abstract properties of various data structures&emdash;such as stacks, queues, lists, and trees&emdash;to choose which to use in a given application context, and use these structures effectively in application programs;</li>
+          <li> implement various data structures in more than one manner, compare the different implementations, and explain the advantages and disadvantages of the different implementations;</li>
+          <li>implement various sorting algorithms, and be able to choose the most appropriate algorithm for a given application context based on  efficiency in terms of both time and space;</li>
+          <li>use recursion to manipulate these data structures, where appropriate.</li>
+          <li>work effectively within a team of your peers.</li>
         </ul>
 
         In support of these objectives, your grade in the class will depend
