Fix Exercise 0 text.

--- a/calendar.html
+++ b/calendar.html
@@ -17,11 +17,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- Responsive and mobile friendly stuff -->
-    <meta name="HandheldFriendly" content="True"/>
-      <meta name="MobileOptimized" content="320"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-	<!-- Stylesheets -->
+    <met<!-- Stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/html5reset.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/col.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/2cols.css" media="all">
@@ -94,7 +90,7 @@
             Introduction to the Standard Template Library (STL).
           </div>
           <div class="reading col span_5_of_8">
-            Read sections 12.1, 12.2, and 12.4 of <a href="https://fbb-git.github.io/cppannotations/cppannotations/html/cplusplus12.html">C++ Annotations</a>. I <strong>do not</strong> expect you to absorb everything in 12.2! I want you to start to be aware of what C++ offers &emdash; we'll be coming back to this material several times. The tables <a href="http://www.cplusplus.com/reference/stl/">here</a> offer another perspective on this material.
+            Read sections 12.1, 12.2, and 12.4 of <a href="https://fbb-git.github.io/cppannotations/cppannotations/html/cplusplus12.html">C++ Annotations</a>. I <strong>do not</strong> expect you to absorb everything in 12.4! I want you to start to be aware of what C++ offers &emdash; we'll be coming back to this material several times. The tables <a href="http://www.cplusplus.com/reference/stl/">here</a> offer another perspective on this material.
           </div>
         </div>
 
