Add C++ Reference resource.

--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,9 @@
  <p><a href="http://cplusplus.com">http://cplusplus.com</a>--especially <a href="http://cplusplus.com/stl">STL</a>
     </p>
 
+  <p><a href="http://en.cppreference.com/w/cpp">C++ Reference</a>
+  </p>.
+
         <h3>Local Resources (about this course)</h3>
 
  <p><a href="tbl.html">Team-Based Learning</a> (TBL)</p>
