Add email and slides, fix some typos.

--- a/calendar.html
+++ b/calendar.html
@@ -77,7 +77,8 @@
             </p>
 
             <p><a href="mail1.txt">Here</a> is the email I sent
-                before classes started.</p>
+              before classes started, and the <a href="slides/Class1.pdf">slides</a> from our first class meeting.
+            </p>
           </div>
         </div>
 
