Add link to g++ page.

--- a/resources.html
+++ b/resources.html
@@ -47,6 +47,9 @@
 
  <p><a href="grades.html">Grading Policy</a></p>
 
+  <p><a href="g++.html">Installing and Using g++</a>
+  </p>
+
  <hr/>
 </body>
 </html>
