Add link to g++ instructions from calendar.

--- a/calendar.html
+++ b/calendar.html
@@ -91,7 +91,11 @@
             Introduction to the Standard Template Library (STL).
           </div>
           <div class="reading col span_5_of_8">
-            Read sections 12.1, 12.2, and 12.4 of <a href="https://fbb-git.github.io/cppannotations/cppannotations/html/cplusplus12.html">C++ Annotations</a>. I <strong>do not</strong> expect you to absorb everything in 12.4! I want you to start to be aware of what C++ offers &emdash; we'll be coming back to this material several times. The tables <a href="http://www.cplusplus.com/reference/stl/">here</a> offer another perspective on this material.
+            <p>
+              Read sections 12.1, 12.2, and 12.4 of <a href="https://fbb-git.github.io/cppannotations/cppannotations/html/cplusplus12.html">C++ Annotations</a>. I <strong>do not</strong> expect you to absorb everything in 12.4! I want you to start to be aware of what C++ offers &emdash; we'll be coming back to this material several times. The tables <a href="http://www.cplusplus.com/reference/stl/">here</a> offer another perspective on this material.</p>
+
+            <p>Read <a href="g++.html">this</a> to get more detailed information about installing g++ and make on your own machine. I'll also be posting information soon about accessing the College's Linux machines, if you prefer to use g++ that way.</p>
+
           </div>
         </div>
 
