--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ traversals. Sorting and searching techniques. Graph algorithms.
         If you successfully complete this course, you will be able to
 
         <ul>
-          <li>use the abstract properties of various data structures &emdash; such as stacks, queues, lists, and trees &emdash; to choose which to use in a given application context, and use these structures effectively in application programs;</li>
+          <li>use the abstract properties of various data structures&mdash;such as stacks, queues, lists, and trees&mdash;to choose which to use in a given application context, and use these structures effectively in application programs;</li>
           <li> implement various data structures in more than one manner, compare the different implementations, and explain the advantages and disadvantages of the different implementations;</li>
           <li>implement various sorting algorithms, and be able to choose the most appropriate algorithm for a given application context based on  efficiency in terms of both time and space;</li>
           <li>use recursion to manipulate these data structures, where appropriate.</li>
