Add exercise 0 document.

--- a/calendar.html
+++ b/calendar.html
@@ -96,6 +96,8 @@
 
             <p>Read <a href="g++.html">this</a> to get more detailed information about installing g++ and make on your own machine. I'll also be posting information soon about accessing the College's Linux machines, if you prefer to use g++ that way.</p>
 
+<p>Here will be the link to the Exercise 0 instructions.</p>
+
           </div>
         </div>
 
