Add information about connecting to Linux lab.

--- a/g++.html
+++ b/g++.html
@@ -37,6 +37,8 @@
 
   <p>If you have a Linux installation you're comfortable using, make sure you've installed the packages containing g++ and make (it's almost certain that make is already installed.</p>
 
+  <p>The college also has a Linux lab in the W.E.B. which you can access either in person or remotely. See <a href="linuxlab.html">this page</a> for specific instructions. (<em>Please</em> read even if you already have experience using the Linux lab machines.)</p>
+
   <h3>MacOS</h3>
 
   <p>Probably the easiest way to install these tools on a Mac is to use <a href="https://brew.sh">HomeBrew</a>. Note that you may need to install some elements of XCode in order to use HomeBrew.</p>
