Fix erroneous HomeBrew command

--- a/g++.html
+++ b/g++.html
@@ -44,7 +44,7 @@
   <p>Probably the easiest way to install these tools on a Mac is to use <a href="https://brew.sh">HomeBrew</a>. Note that you may need to install some elements of XCode in order to use HomeBrew.</p>
 
   <p>Once you've installed HomeBrew, run two commands: <code>
-    brew install g++
+    brew install gcc
     </code>and <code>
       brew install make
     </code>.  </p>
