Add detail for RAT 2.

--- a/calendar.html
+++ b/calendar.html
@@ -163,7 +163,8 @@
 
           </div>
           <div class="reading col span_5_of_8">
-Read Chapter 2.
+            <p>Read Chapter 2. The RAT will be on sections 2.1&mdash;2.3.</p>
+            <p>The discussion, particularly the animations, <a href="https://opendsa-server.cs.vt.edu/ODSA/Books/CS2/html/Queue.html">here</a> may help you with section 2.3. Note that this text uses <em>slightly</em> different terminology, but only a bit. Don't worry about the Java code (unless reading it helps you understand!); focus on the animations and the little 'exercises' at the end.</p>
           </div>
         </div>
 
