Add g++ instructions and tweak Class 5 readings.

--- a/calendar.html
+++ b/calendar.html
@@ -141,11 +141,10 @@
 <p>Review the documentation for <code>
               stack</code>,
 <code>
-  queue</code>,
+  array</code>,
+
 <code>
-  deque</code>, and
-<code>
-  set</code> at the <a href="http://www.cplusplus.com/reference/stl/">STL reference</a>.</p>
+  set</code>, and <code>unordered_set</code> at the <a href="http://www.cplusplus.com/reference/stl/">STL reference</a>.</p>
 
 <p>Today we'll also decide on peer evaluation criteria.</p>
           </div>
