--- a/calendar.html
+++ b/calendar.html
@@ -146,6 +146,10 @@
 <code>
   set</code>, and <code>unordered_set</code> at the <a href="http://www.cplusplus.com/reference/stl/">STL reference</a>.</p>
 
+ <p><a href="docs/Exercise1.pdf">Here</a>
+              are the Exercise 1 instructions.</p>
+
+
 <p>Today we'll also decide on peer evaluation criteria.</p>
           </div>
         </div>
