Add peer evaluation grading criteria.

--- a/grades.html
+++ b/grades.html
@@ -78,11 +78,11 @@
   <h4>Peer Evaluation Critera</h4>
 
   <pre>
-1.
-2.
-3.
-4.
-5.
+1. Attendance
+2. Preparation
+3. Contribute to discussion
+4. Communication
+5. Professionalism
   </pre>
 
 
