--- a/calendar.html
+++ b/calendar.html
@@ -205,7 +205,8 @@ Unit 2 Application Activities
          Working with Array-based Lists.
        </div>
        <div class="reading col span_5_of_8">
-
+ <p><a href="docs/Exercise2.pdf">Here</a>
+              are the Exercise 2 instructions.</p>
        </div>
 
      <div class="section group">
