Specify Unit 3 RAT readings.

--- a/calendar.html
+++ b/calendar.html
@@ -220,7 +220,8 @@ Unit 2 Application Activities
        </div>
        <div class="reading col span_5_of_8">
          <p>
-           Read Chapter 3.</p>
+           Read Chapter 3. The RATs will <em>not</em> include questions on section 3.3.
+         </p>
        </div>
 
      <div class="section group">
