--- a/calendar.html
+++ b/calendar.html
@@ -206,7 +206,9 @@ Unit 2 Application Activities
        </div>
        <div class="reading col span_5_of_8">
  <p><a href="docs/Exercise2.pdf">Here</a>
-              are the Exercise 2 instructions.</p>
+   are the Exercise 2 instructions.</p>
+ <p>And <a href="docs/Project0.pdf">here</a> is the Project 0 assignment. Email me your solution (see the instructions) by 11:59pm on Wednesday, October 11. I will be posting more details about how the project will be graded shortly.
+ </p>
        </div>
 
      <div class="section group">
