--- a/calendar.html
+++ b/calendar.html
@@ -273,18 +273,6 @@ Exercise 3: Working with Linked Lists.
        </div>
     </div>
 
-         <div class="section group">
-       <div class="session col span_8_of_8"></div>
-     </div>
-     <div class="section group">
-       <div class="activity col span_3_of_8">
-         <span class="exam">Midterm Exam.</span>
-       </div>
-       <div class="reading col span_5_of_8">
-There will be a link here to a midterm review sheet.
-       </div>
-    </div>
-
 
     </div>
      <div class="section group">
@@ -312,6 +300,19 @@ Unit 4 Application Activities
 
        </div>
     </div>
+
+     <div class="section group">
+       <div class="session col span_8_of_8"></div>
+     </div>
+     <div class="section group">
+       <div class="activity col span_3_of_8">
+         <span class="exam">Midterm Exam. (New Date!)</span>
+       </div>
+       <div class="reading col span_5_of_8">
+There will be a link here to a midterm review sheet. The exam will cover Units 1, 2, and 3.
+       </div>
+    </div>
+
 
           <div class="section group">
        <div class="session col span_8_of_8"></div>
