Add project 0 grading info.

--- a/calendar.html
+++ b/calendar.html
@@ -207,7 +207,7 @@ Unit 2 Application Activities
        <div class="reading col span_5_of_8">
  <p><a href="docs/Exercise2.pdf">Here</a>
    are the Exercise 2 instructions.</p>
- <p>And <a href="docs/Project0.pdf">here</a> is the Project 0 assignment. Email me your solution (see the instructions) by 11:59pm on Wednesday, October 11. I will be posting more details about how the project will be graded shortly.
+ <p>And <a href="docs/Project0.pdf">here</a> is the Project 0 assignment. Email me your solution (see the instructions) by 11:59pm on Wednesday, October 11. Grading details are <a href="project0grading.html">here</a>.
  </p>
        </div>
 
