--- a/calendar.html
+++ b/calendar.html
@@ -269,7 +269,7 @@ Unit 3 Application Activities
 Exercise 3: Working with Linked Lists.
        </div>
        <div class="reading col span_5_of_8">
-
+         <a href="docs/Exercise3.pdf">Here</a> is today's exercise.
        </div>
     </div>
 
