Add chapter 10 reading for unit 4.

--- a/calendar.html
+++ b/calendar.html
@@ -323,7 +323,7 @@ Unit 4 Application Activities
 Unit 4 Application Activities
        </div>
        <div class="reading col span_5_of_8">
-
+Read Chapter 10.
        </div>
     </div>
 
