--- a/calendar.html
+++ b/calendar.html
@@ -297,7 +297,7 @@ Read Chapter 6.
 Unit 4 Application Activities
        </div>
        <div class="reading col span_5_of_8">
-
+         <p>The questions and animations <a href="https://opendsa-server.cs.vt.edu/ODSA/Books/CS2/html/BinaryTreeIntro.html">here</a> might help you with basic binary tree terms and operations.</p>
        </div>
     </div>
 
@@ -332,7 +332,10 @@ Read Chapter 10.
      </div>
      <div class="section group">
        <div class="activity col span_3_of_8">
-Unit 4 Application Activities
+         Unit 4 Application Activities<br/>
+         <span class="project"><a href="docs/Project1.pdf">Project 1 Assigned</a>
+           due 11:59pm, Wednesday, November 15.</span>
+
        </div>
        <div class="reading col span_5_of_8">
 
@@ -383,7 +386,8 @@ Unit 5 Application Activities
      </div>
      <div class="section group">
        <div class="activity col span_3_of_8">
-Unit 5 Application Activities
+         Unit 5 Application Activities<br/>
+         <span class="project">Project 1 due at 11:59 LAST NIGHT.</span>
        </div>
        <div class="reading col span_5_of_8">
 
