Add unit 5 reading guide.

--- a/calendar.html
+++ b/calendar.html
@@ -365,7 +365,7 @@ Exercise 4: Working with Binary Trees.
          iRAT and tRAT
        </div>
        <div class="reading col span_5_of_8">
-Read Chapter 11.
+         Read Chapter 11. <a href="unit5guide.html">Here</a> is a reading guide. The RAT will cover the whole chapter, but at a superficial level. Focus initially on understanding how the algorithms work, and how they're different from each other.
        </div>
     </div>
 
