Change Unit 6 to Hash Tables.

--- a/calendar.html
+++ b/calendar.html
@@ -400,11 +400,11 @@ Unit 5 Application Activities
      <div class="section group">
        <div class="activity col span_3_of_8">
          Unit 6:<br/>
-         Graphs<br/>
+         Hash Tables<br/>
          iRAT and tRAT
        </div>
        <div class="reading col span_5_of_8">
-Read Chapter 12.
+Read Chapter 5.
        </div>
     </div>
 
@@ -437,7 +437,7 @@ Unit 6 Application Activities
      <div class="section group">
        <div class="activity col span_3_of_8">
          Exercise 6:<br/>
-         Working with Graphs.
+         Working with Hash Tables.
        </div>
        <div class="reading col span_5_of_8">
 
