Add unit 6 reading guide. Test fonts.

--- a/unit5guide.html
+++ b/unit5guide.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/html5reset.css" media="all"/>
 	<link rel="stylesheet" type="text/css" href="css/col.css" media="all"/>
         <link rel="stylesheet" type="text/css" href="css/8cols.css" media="all"/>
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro'
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400'
     rel='stylesheet' type='text/css' />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
