Link to unit 6 guide.

--- a/calendar.html
+++ b/calendar.html
@@ -404,7 +404,7 @@ Unit 5 Application Activities
          iRAT and tRAT
        </div>
        <div class="reading col span_5_of_8">
-Read Chapter 5.
+         Read Chapter 5. <a href="unit6guide.html">Here</a> is a reading guide.
        </div>
     </div>
 
