Add final review guide.

--- a/calendar.html
+++ b/calendar.html
@@ -451,7 +451,8 @@ Unit 6 Application Activities
 
        </div>
        <div class="reading col span_5_of_8">
-         Final review.<br/>
+         Final review. Here is a <a href="finalreview.html">review guide</a> (a work in progress).
+         <br/>
          Final peer evaluation.<br/>
        </div>
     </div>
