--- a/calendar.html
+++ b/calendar.html
@@ -404,7 +404,7 @@ Unit 5 Application Activities
          iRAT and tRAT
        </div>
        <div class="reading col span_5_of_8">
-         Read Chapter 5. <a href="unit6guide.html">Here</a> is a reading guide.
+         Read Chapter 5. <a href="unit6guide.html">Here</a> is a reading guide. <a href="docs/Project2.pdf">Project 2</a> is assigned here; it's due at 11:59pm on Momday, December 11.
        </div>
     </div>
 
@@ -448,7 +448,7 @@ Unit 6 Application Activities
      </div>
      <div class="section group">
        <div class="activity col span_3_of_8">
-
+ <span class="project">Project 2 due at 11:59 LAST NIGHT.</span>
        </div>
        <div class="reading col span_5_of_8">
          Final review. Here is a <a href="finalreview.html">review guide</a> (a work in progress).
