--- a/calendar.html
+++ b/calendar.html
@@ -440,7 +440,7 @@ Unit 6 Application Activities
          Working with Hash Tables.
        </div>
        <div class="reading col span_5_of_8">
-
+         <a href="docs/Exercise6.pdf">Here</a> are instructions for today's exercise.
        </div>
 
      <div class="section group">
